# common

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md  conanfile.py  conanfile.txt
.github/workflows/: conan-multi-platform.yml
cmake/: ka_common.cmake
include/common/: function.hpp
include/ka/common/: IndirectSpan.hpp  assert.hpp  cast.hpp  fixed.hpp  hash.hpp  log.hpp  pragma.hpp  range_set.hpp
src/: log.cpp
test/: range_set_test.cpp  test_assert.cpp  test_assert_compile.cpp  test_cast.cpp  test_hash.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
